@@ -139,45 +139,46 @@
 #define SWITCH_ROOM 136
 #define SWITCH_ROOMS 137
 #define SWITCH_RSARGS 138
-#define SWITCH_SAVE 139
-#define SWITCH_SEE 140
-#define SWITCH_SEEFLAG 141
-#define SWITCH_SELF 142
-#define SWITCH_SEND 143
-#define SWITCH_SET 144
-#define SWITCH_SETQ 145
-#define SWITCH_SILENT 146
-#define SWITCH_SKIPDEFAULTS 147
-#define SWITCH_SPEAK 148
-#define SWITCH_SPOOF 149
-#define SWITCH_STATS 150
-#define SWITCH_STATUS 151
-#define SWITCH_SUMMARY 152
-#define SWITCH_TABLES 153
-#define SWITCH_TAG 154
-#define SWITCH_TELEPORT 155
-#define SWITCH_TF 156
-#define SWITCH_THINGS 157
-#define SWITCH_TITLE 158
-#define SWITCH_TRACE 159
-#define SWITCH_TYPE 160
-#define SWITCH_UNCLEAR 161
-#define SWITCH_UNCOMBINE 162
-#define SWITCH_UNFOLDER 163
-#define SWITCH_UNGAG 164
-#define SWITCH_UNHIDE 165
-#define SWITCH_UNMUTE 166
-#define SWITCH_UNREAD 167
-#define SWITCH_UNTAG 168
-#define SWITCH_UNTIL 169
-#define SWITCH_URGENT 170
-#define SWITCH_USEFLAG 171
-#define SWITCH_WHAT 172
-#define SWITCH_WHO 173
-#define SWITCH_WILD 174
-#define SWITCH_WIPE 175
-#define SWITCH_WIZ 176
-#define SWITCH_WIZARD 177
-#define SWITCH_YES 178
-#define SWITCH_ZONE 179
+#define SWITCH_RSNOPARSE 139
+#define SWITCH_SAVE 140
+#define SWITCH_SEE 141
+#define SWITCH_SEEFLAG 142
+#define SWITCH_SELF 143
+#define SWITCH_SEND 144
+#define SWITCH_SET 145
+#define SWITCH_SETQ 146
+#define SWITCH_SILENT 147
+#define SWITCH_SKIPDEFAULTS 148
+#define SWITCH_SPEAK 149
+#define SWITCH_SPOOF 150
+#define SWITCH_STATS 151
+#define SWITCH_STATUS 152
+#define SWITCH_SUMMARY 153
+#define SWITCH_TABLES 154
+#define SWITCH_TAG 155
+#define SWITCH_TELEPORT 156
+#define SWITCH_TF 157
+#define SWITCH_THINGS 158
+#define SWITCH_TITLE 159
+#define SWITCH_TRACE 160
+#define SWITCH_TYPE 161
+#define SWITCH_UNCLEAR 162
+#define SWITCH_UNCOMBINE 163
+#define SWITCH_UNFOLDER 164
+#define SWITCH_UNGAG 165
+#define SWITCH_UNHIDE 166
+#define SWITCH_UNMUTE 167
+#define SWITCH_UNREAD 168
+#define SWITCH_UNTAG 169
+#define SWITCH_UNTIL 170
+#define SWITCH_URGENT 171
+#define SWITCH_USEFLAG 172
+#define SWITCH_WHAT 173
+#define SWITCH_WHO 174
+#define SWITCH_WILD 175
+#define SWITCH_WIPE 176
+#define SWITCH_WIZ 177
+#define SWITCH_WIZARD 178
+#define SWITCH_YES 179
+#define SWITCH_ZONE 180
 #endif                          /* SWITCHES_H */
