@@ -136,6 +136,7 @@ REVIEW
 ROOM
 ROOMS
 RSARGS
+RSNOPARSE
 SAVE
 SEE
 SEEFLAG
