@@ -1,6 +1,6 @@
 /* AUTOGENERATED FILE. DO NOT EDIT! */
-static const int max_switch = 179;
-SWITCH_VALUE switch_list[180] = {
+static const int max_switch = 180;
+SWITCH_VALUE switch_list[181] = {
   {"ACCESS", SWITCH_ACCESS, 0},
   {"ADD", SWITCH_ADD, 0},
   {"AFTER", SWITCH_AFTER, 0},
@@ -139,6 +139,7 @@ SWITCH_VALUE switch_list[180] = {
   {"ROOM", SWITCH_ROOM, 0},
   {"ROOMS", SWITCH_ROOMS, 0},
   {"RSARGS", SWITCH_RSARGS, 0},
+  {"RSNOPARSE", SWITCH_RSNOPARSE, 0},
   {"SAVE", SWITCH_SAVE, 0},
   {"SEE", SWITCH_SEE, 0},
   {"SEEFLAG", SWITCH_SEEFLAG, 0},
